force-app/main/default/objects/Assessment__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The assessor responsible for this assessment</description>
    <inlineHelpText>The assessor responsible for this assessment</inlineHelpText>
    <label>Assessor (External)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>