force-app/main/default/objects/Assessment__c/fields/Assessor_Internal__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Internal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor (Internal)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>