force-app/main/default/objects/Assessment__c/fields/Number_of_criteria__c.field-meta.xml
<CustomField>
    <fullName>Number_of_criteria__c</fullName>
    <description>This is the count of the number of assessment criteria</description>
    <inlineHelpText>This is the count of the number of assessment criteria</inlineHelpText>
    <label>Number of criteria</label>
    <summaryForeignKey>Assessment_Criteria__c.Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>