force-app/main/default/objects/Assessment__c/fields/Number_of_Rating_criteria__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rating_criteria__c</fullName>
    <description>This is the count of the number of criteria of type &#39;Rating&#39;. It can be used to calculate an average rating.</description>
    <inlineHelpText>This is the count of the number of criteria of type &#39;Rating&#39;. It can be used to calculate an average rating.</inlineHelpText>
    <label>Number of Rating criteria</label>
    <summaryFilterItems>
        <field>Assessment_Criteria__c.Type__c</field>
        <operation>equals</operation>
        <value>Rating</value>
    </summaryFilterItems>
    <summaryForeignKey>Assessment_Criteria__c.Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>