force-app/main/default/objects/Assessment__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>This is the conclusion from the Assessment. The field can be filled manually, or custom logic can be developed by the customer to update it, based on score and other criteria.</description>
    <inlineHelpText>This is the conclusion from the Assessment.</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>