force-app/main/default/objects/Assessment__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>This is the total of all scores on assessment criteria</description>
    <inlineHelpText>This is the total of all scores on assessment criteria</inlineHelpText>
    <label>Score</label>
    <summarizedField>Assessment_Criteria__c.Rating__c</summarizedField>
    <summaryFilterItems>
        <field>Assessment_Criteria__c.Type__c</field>
        <operation>equals</operation>
        <value>Rating</value>
    </summaryFilterItems>
    <summaryForeignKey>Assessment_Criteria__c.Assessment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>