force-app/main/default/objects/Assessment__c/fields/Stage_Assessment_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Stage_Assessment_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stage Assessment</label>
    <referenceTo>Stage_Assessment__c</referenceTo>
    <relationshipLabel>Assessments (Stage Assessment)</relationshipLabel>
    <relationshipName>Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>