force-app/main/default/objects/Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessor__c</columns>
    <columns>Assessor_Internal__c</columns>
    <columns>Stage_Assessment_Lookup__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>